--- a/src/app/quiz-component/question-card/question-card.component.html
+++ b/src/app/quiz-component/question-card/question-card.component.html
@@ -1,18 +1,36 @@
 <div class="card" style="padding:20px">
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="questionData.length" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    
-    <div class="card bg-info" *ngFor="let data of questionData" style="margin:20px">
-      <div class="card-body">
-        <h1>Q. {{data.QSN}}</h1>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">1.{{data.OPTION1}}</li>
-          <li class="list-group-item">2.{{data.OPTION2}}</li>
-          <li class="list-group-item">3.{{data.OPTION3}}</li>
-          <li class="list-group-item">4.{{data.OPTION4}}</li>
-        </ul> 
+    <div class="row" *ngIf="quizService.qns">
+        <div class="col s8 offset-s2">
+          <h2>Time Elapsed : {{quizService.displayTimeElapsed()}}</h2>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" [style.width.%]="(quizService.qnProgress+1)/quizService.qns.length*100" aria-valuenow="questionData.length" aria-valuemin="0" aria-valuemax="100"></div>
+          </div><br>
+          <div class="card cyan darken-1">
+            <div class="card-content white-text">
+              <h1>Q.{{quizService.qnProgress+1}} {{quizService.qns[quizService.qnProgress].QSN}}</h1>
+            </div>
+            <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item" *ngIf="quizService.qns[quizService.qnProgress].OPTION1!= null" (click)="Answer(quizService.qns[quizService.qnProgress].QUESTION_ID,1)">
+                    {{quizService.qns[quizService.qnProgress].OPTION1}}
+                  </li>
+                  <li class="list-group-item" *ngIf="quizService.qns[quizService.qnProgress].OPTION2!= null" (click)="Answer(quizService.qns[quizService.qnProgress].QUESTION_ID,2)">
+                    {{quizService.qns[quizService.qnProgress].OPTION2}}
+                  </li>
+                  <li class="list-group-item" *ngIf="quizService.qns[quizService.qnProgress].OPTION3!= null" (click)="Answer(quizService.qns[quizService.qnProgress].QUESTION_ID,3)">
+                    {{quizService.qns[quizService.qnProgress].OPTION3}}
+                  </li>
+                  <li class="list-group-item" *ngIf="quizService.qns[quizService.qnProgress].OPTION4!= null" (click)="Answer(quizService.qns[quizService.qnProgress].QUESTION_ID,4)">
+                    {{quizService.qns[quizService.qnProgress].OPTION4}}
+                  </li>
+                </ul>
+            </div>
+          </div>
+      
+        </div>
       </div>
-    </div>
-  </div>
+
+      
+</div>
+  
   
