--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark red fixed-top" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark blue fixed-top" [containerInside]="false">
 
     <!-- Navbar brand -->
-    <mdb-navbar-brand><a class="navbar-brand" href="#">Navbar</a></mdb-navbar-brand>
+    <mdb-navbar-brand><a class="navbar-brand" href="#">Quizzer</a></mdb-navbar-brand>
   
     <!-- Collapsible content -->
     <links>
@@ -10,10 +10,10 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link waves-light" mdbWavesEffect ><mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span></a>
+          <a class="nav-link waves-light" mdbWavesEffect routerLink="quiz-component/contact-card"><mdb-icon fas icon="envelope" ></mdb-icon> Contact<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="cog"></mdb-icon> Settings</a>
+          <a class="nav-link waves-light" mdbWavesEffect routerLink="quiz-component/home-component"><mdb-icon fas icon="home" ></mdb-icon> Home<span class="sr-only">(current)</span></a>
         </li>
   
         <!-- Dropdown -->
