--- a/src/app/quiz-component/home-component/home-component.component.html
+++ b/src/app/quiz-component/home-component/home-component.component.html
@@ -1,9 +1,15 @@
-<div class="card">
+<div class="card col-10 offset-1">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4" align="center">Welcome to Quizzer</h1>
+          <p class="lead" align="center"> Get ready to Compete.</p>
+        </div>
+      </div>
     <div class="card-body">
         <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
             <mdb-carousel-item>
               <div class="view w-100">
-                <img class="d-block w-100" src="assets/kahoot.png" alt="First slide">
+                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(28).jpg" alt="First slide">
                 <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
               </div>
               <div class="carousel-caption">
@@ -13,7 +19,7 @@
             </mdb-carousel-item>
             <mdb-carousel-item>
               <div class="view w-100">
-                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
+                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(43).jpg" alt="Second slide">
                 <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
               </div>
               <div class="carousel-caption">
@@ -23,7 +29,7 @@
             </mdb-carousel-item>
             <mdb-carousel-item>
               <div class="view w-100">
-                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
+                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
                 <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
               </div>
               <div class="carousel-caption">
@@ -36,40 +42,43 @@
     <div class="card" style="padding:20px">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-              <div class="card bg-dark text-white">
-                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Card image">
+              <div class="card bg-dark text-white" routerLink="/quiz-component/exam-card">
+                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(1).jpg" alt="Card image">
                   <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text">Last updated 3 mins ago</p>
+                    <br><br><h2 class="card-title" align="center">Exam Card</h2>
                   </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-              <div class="card bg-dark text-white">
-                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Card image">
+              <div class="card bg-dark text-white" routerLink="/quiz-component/question-card">
+                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(2).jpg" alt="Card image">
                   <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text">Last updated 3 mins ago</p>
+                    <br><br><h2 class="card-title" align="center">Question Card</h2>
                   </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-              <div class="card bg-dark text-white">
-                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Card image">
+              <div class="card bg-dark text-white" routerLink="/quiz-component/contact-card">
+                  <img class="card-img" src="https://mdbootstrap.com/img/Photos/Slides/img%20(3).jpg" alt="Card image">
                   <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text">Last updated 3 mins ago</p>
+                    <br><br><h2 class="card-title" align="center">Contact Card</h2>
                   </div>
                 </div>
             </div>
           </div>
     </div>
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4" align="center">Rules</h1>
+          <p class="lead" align="center"> All questions are mandatory to answer</p>
+          <p class="lead" align="center"> All the answers will be recorded by website</p>
+          <p class="lead" align="center"> Answer once given cannot be changed</p>
+          <p class="lead" align="center"> Leaderboard result is based on marks as well as time taken</p>
+          <p class="lead" align="center"> Next question will appear as soon as you click the answer of previous question.</p>
+        </div>
+      </div>
     
 </div>
-    
-    
-  
+
+
+   
